<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_profile"
    android:orientation="vertical"
    tools:context="com.hirebuddy.activity.ProfileActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/header"
        android:gravity="center"
        android:text="@string/profile_info"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_20"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

            <FrameLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_180"
                android:scrollbarAlwaysDrawVerticalTrack="true">

        <ImageView
            android:id="@+id/img_backimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coverimage"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_profile"/>
            </FrameLayout>
        <ImageView
            android:id="@+id/img_coveruicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:contentDescription="@string/uploadimageicon"
            android:src="@drawable/cam"/>

        <!--<ImageView-->
            <!--android:id="@+id/imageView_logo"-->
            <!--android:layout_width="@dimen/dp_40"-->
            <!--android:layout_height="@dimen/dp_40"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="@dimen/dp_50"-->
            <!--android:contentDescription="@string/applogo"-->
            <!--android:src="@drawable/logo"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/imageView_logo"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="@string/har_zaroorat_ka_sathi"/>-->


        <ImageView
            android:id="@+id/circular_image_pofile"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:background="@color/black"
            android:contentDescription="@string/userimage"
            android:scaleType="fitXY"
            android:src="@drawable/appicon"
            android:layout_below="@+id/img_coveruicon"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_77"
            android:layout_marginEnd="@dimen/dp_10"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/circular_image_pofile"
            android:layout_alignEnd="@+id/circular_image_pofile"
            android:contentDescription="@string/uploadimageicon"
            android:src="@drawable/cam"/>

    </RelativeLayout>

    <!--FIRST NAME-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black">
    <EditText
        android:id="@+id/edt_first_name_profile"
        style="@style/edittextstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:digits="@string/a_z"
        android:drawablePadding="@dimen/dp_7"
        android:drawableLeft="@drawable/user"
        android:hint="@string/first_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

    <!--LINE 1-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_52"
        android:background="@color/grey"/>

    <!--LAST NAME-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">
        <EditText
            android:id="@+id/edt_last_name_profile"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:digits="@string/a_z"
            android:drawablePadding="@dimen/dp_7"
            android:drawableLeft="@drawable/user"
            android:hint="@string/last_name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <!--LINE 2-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_52"
        android:background="@color/grey"
        />

    <LinearLayout
        android:id="@+id/ll_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!--DATE OF BIRTH-->
    <TextView
        android:id="@+id/txt_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/date_of_birth"
        android:textColor="@color/yellow"
        android:textSize="@dimen/sp_12"/>
        <TextView
            android:id="@+id/txt_dob_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_18"
            android:drawablePadding="@dimen/dp_7"
            android:drawableStart="@drawable/calender"
            android:enabled="false"
            android:padding="@dimen/dp_10"
            android:text="@string/ddmmyy"
            android:textColor="@color/black"
            android:textColorHint="@color/yellow"/>
    </LinearLayout>
    <!--LINE 3-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_52"
        android:background="@color/grey"/>

    <!--<CalendarView-->
        <!--android:id="@+id/calender_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="gone"-->
        <!--android:background="@color/colorAccent"-->
        <!--/>-->

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_47"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/gender"
        android:textColor="@color/yellow"
        android:textSize="@dimen/sp_12"
        />

    <!--GENDER-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_13"
        android:contentDescription="@string/gendericon"
        android:padding="@dimen/dp_12"
        android:src="@drawable/gender"
        />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb_male_profile"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rb_male_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/yellow"
            android:padding="@dimen/sp_10"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/rb_female_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/yellow"
            android:padding="@dimen/sp_10"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            tools:targetApi="lollipop" />
    </RadioGroup>
</LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_52"
        android:background="@color/grey"/>


    <!--EMAIL-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">
        <EditText
            android:id="@+id/edt_email_profile"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/dp_7"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/yellow"/>
    </android.support.design.widget.TextInputLayout>

    <!--LINE 5-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_52"
        android:background="@color/grey"
        />

    <!--NEXT-->
    <Button
        style="@style/ButtonStyle"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/fill_button_pressed_selector"
        android:onClick="next"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/black"/>

</LinearLayout>
    </LinearLayout>
</LinearLayout>