<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_thank_you_wish">

    <!--HEADER-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:gravity="center"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_50"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_wish_posted_successfully"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_35"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_using_hirebuddy"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/thanks_your_using_hirebuddy_color"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:background="@color/finish_btn_background"
        android:layout_alignParentBottom="true"
        android:onClick="finishBtn"
        />
    </RelativeLayout>
</LinearLayout>