<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hirebuddy.activity.ProfileEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile_info"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tv_save_pea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="Crop"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/tv_save_pea"
            android:padding="@dimen/_5sdp"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_image_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:scrollbarAlwaysDrawVerticalTrack="true" >

            <com.theartofdev.edmodo.cropper.CropImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </FrameLayout>

        <ImageView
            android:id="@+id/circular_image_pofile"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_coveruicon"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_77"
            android:background="@color/black"
            android:contentDescription="@string/userimage"
            android:scaleType="fitXY"
            android:src="@drawable/appicon_profile" />

    </RelativeLayout>


</LinearLayout>